# lyfe

./: .gitignore  Cargo.toml  LICENSE-APACHE-2.0  LICENSE-MIT  README.md
demo/: Cargo.toml
demo/src/: app.rs  app_types.rs  cli.rs  colors.rs  events.rs  interaction.rs  lifecycle.rs  main.rs  overlays.rs  rendering.rs  tooltip.rs  ui.rs
fluidsim/: Cargo.toml
fluidsim/shaders/: charge_projection.comp  coarse_grid.comp  diffusion.comp  enzyme.comp  leak.comp  reaction.comp  thermal_diffusion.comp
fluidsim/src/: chemistry.rs  coarse.rs  enzyme.rs  gpu.rs  grid.rs  inspect.rs  kinetics_integration.rs  leak.rs  lib.rs  scenario.rs  semantic.rs  sim.rs  solid.rs  species.rs
fluidsim/src/gpu/: buffer.rs  dispatch.rs  drop_impl.rs  mod.rs  pipelines.rs  setup.rs
fluidsim/src/scenario/: acid_base.rs  buffers.rs  builder.rs  catalyst.rs  core.rs  demo.rs  enzyme.rs  helpers.rs  leak.rs  mod.rs
fluidsim/tests/: acid_base_probe.rs  buffer_probe.rs  leak_probe.rs
kinetics/: Cargo.toml
kinetics/src/: acid_base.rs  config.rs  diagnostics.rs  engine.rs  lean_bridge.rs  lean_evaluator.rs  lib.rs  noop.rs  snapshot.rs  update.rs
lean/: LyfeRules.lean  Main.lean  lake-manifest.json  lakefile.lean
lean/LyfeRules/: AcidBase.lean  Catalyst.lean  Enzyme.lean  Eval.lean  Types.lean
renderer/: Cargo.toml
renderer/shaders/: fullscreen.vert  visualization.frag
renderer/src/: context.rs  egui_integration.rs  lib.rs  pipeline.rs
