[package]
name = "renderer"
version = "0.1.0"
edition = "2024"

[lib]
name = "renderer"
path = "src/lib.rs"

[dependencies]
fluidsim = { path = "../fluidsim" }
ash.workspace = true
gpu-allocator.workspace = true
bytemuck.workspace = true
glam.workspace = true
anyhow.workspace = true
thiserror.workspace = true
log.workspace = true
parking_lot.workspace = true
egui.workspace = true
egui-winit.workspace = true
egui-ash-renderer.workspace = true
winit.workspace = true
raw-window-handle.workspace = true
shaderc.workspace = true
